// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PositionInput should render correctly on desktop 1`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
    </div>
    <div>
      <div>
        x_position
      </div>
      <div>
        mm
      </div>
      <div>
        0
      </div>
      <div />
      <input
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 2`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
    </div>
    <div>
      <div>
        y_position
      </div>
      <div>
        mm
      </div>
      <div>
        0
      </div>
      <div />
      <input
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 3`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
      <sub>
        1
      </sub>
    </div>
    <div>
      <div>
        x1_position
      </div>
      <div>
        mm
      </div>
      <div>
        0
      </div>
      <div />
      <input
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 4`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
      <sub>
        1
      </sub>
    </div>
    <div>
      <div>
        y1_position
      </div>
      <div>
        mm
      </div>
      <div>
        0
      </div>
      <div />
      <input
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 5`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
      <sub>
        2
      </sub>
    </div>
    <div>
      <div>
        x2_position
      </div>
      <div>
        mm
      </div>
      <div>
        0
      </div>
      <div />
      <input
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 6`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
      <sub>
        2
      </sub>
    </div>
    <div>
      <div>
        y2_position
      </div>
      <div>
        mm
      </div>
      <div>
        0
      </div>
      <div />
      <input
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 7`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
      <sub>
        C
      </sub>
    </div>
    <div>
      <div>
        cx_position
      </div>
      <div>
        mm
      </div>
      <div>
        0
      </div>
      <div />
      <input
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 8`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
      <sub>
        C
      </sub>
    </div>
    <div>
      <div>
        cy_position
      </div>
      <div>
        mm
      </div>
      <div>
        0
      </div>
      <div />
      <input
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on mobile 1`] = `
<div>
  <div
    id="x_position"
  >
    X
    <div>
      0
    </div>
    <button
      type="button"
    />
  </div>
</div>
`;
